# wpv4

./: README.md
wpv4_bringup/: CMakeLists.txt  package.xml  waypoints.xml
wpv4_bringup/config/: settings.yaml  wpv4_zeros.yaml
wpv4_bringup/include/: WPV4_driver.h
wpv4_bringup/launch/: base_imu.launch  base_only.launch  calibrate_vel.launch  display.launch  imu_test.launch  js_imu.launch  js_odom.launch  js_vel.launch  mani_test.launch  wpv4_track_wpm2.launch  wpv4_wpm2.launch
wpv4_bringup/meshes/: body.dae  m2_base.stl  mecanum_left.dae  mecanum_right.dae  wheel.dae
wpv4_bringup/rviz/: mani.rviz  nav.rviz  urdf.rviz  velodyne.rviz
wpv4_bringup/scripts/: create_udev_rules.sh  delete_udev_rules.sh  wpv4.rules
wpv4_bringup/src/: imu_odometry_wpv4.cpp  odometry.cpp  odometry_publisher.cpp  wpv4_calibrate_velocity.cpp  wpv4_core.cpp  wpv4_imu.cpp  wpv4_js_odometry.cpp  wpv4_js_velcmd.cpp  wpv4_motor_encoder.cpp
wpv4_bringup/src/driver/: SerialCom.cpp  WPV4_driver.cpp
wpv4_bringup/urdf/: wpv4.urdf  wpv4_lms111.urdf  wpv4_lms111_detail.urdf  wpv4_m1.urdf  wpv4_m2.urdf  wpv4_mecanum.urdf  wpv4_mecanum_wpm2.urdf  wpv4_mw.urdf  wpv4_mw_m2.urdf  wpv4_t.urdf  wpv4_t_m1.urdf  wpv4_track.urdf  wpv4_track_wpm1.urdf  wpv4_track_wpm2.urdf  wpv4_wpm1.urdf  wpv4_wpm2.urdf
wpv4_diff_local_planner/: CMakeLists.txt  package.xml  wpv4_diff_local_planner_plugin.xml
wpv4_diff_local_planner/include/waterplus_local_planner/: wpv4_diff_local_planner.h
wpv4_diff_local_planner/src/: wpv4_diff_local_planner.cpp
wpv4_tutorials/: CMakeLists.txt  package.xml
wpv4_tutorials/launch/: demo_imu.launch  demo_nav_siimple_goal.launch  demo_velocity_control.launch  display_m2.launch  display_wpm1.launch  display_wpm2.launch  gazebo.launch  gmapping_lidar.launch  gmapping_lms111.launch  gmapping_lms511.launch  js_imu_rpy.launch  lms_display.launch  m1_display.launch  mani_planning.launch  mw_display.launch  mw_gazebo.launch  nav.launch  nav_lms111.launch  nav_lms511.launch  t_display.launch  t_gazebo.launch  ttt.launch  velodyne.launch
wpv4_tutorials/nav_lidar/: amcl_diff.launch  amcl_omni1.launch  base_local_planner_params.yaml  costmap_common_params.yaml  wpv4_diff_local_planner_params.yaml
wpv4_tutorials/rviz/: mapping.rviz
wpv4_tutorials/src/: wpv4_imu_demo.cpp  wpv4_imu_rpy.cpp  wpv4_nav_simple_goal.cpp  wpv4_velocity_control.cpp
